<resources>
    <string name="app_name">MetehanKARA_TermProject_487</string>
    <string name="mainActivityTxt">YOKSA VAKTİN Mİ YOK ?</string>
    <string name="downloading">Downloading...</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="aboutBtn">ABOUT US</string>
    <string name="visionBTN">VISION</string>
    <string name="missionBtn">MISSION</string>
    <string name="settingsBtn">SETTINGS</string>
    <string name="copyRightTxt">COPY RIGHT @2019</string>
    <string name="newUserTxt">NEW USER REGISTRATION</string>
    <string name="nameEditText" />
    <string name="cityTxt">City :</string>
    <string name="professionTxt">Profession :</string>
    <string name="CreateUserBtn">CREATE USER</string>
    <string name="closeBtn">CLOSE</string>
    <string name="warningTxt" />
    <string name="loginTitleTxt">LOGIN</string>
    <string name="loginEmailTxt" />
    <string name="loginPassword" />
    <string name="loginAppBtn">LOGIN</string>
    <string name="loginCleanBtn">CANCEL</string>
    <string name="forgotPassTxt">Forgot Your Password ?</string>
    <string name="loginWarningMsg" />
    <string name="NameCardViewTxt">Name :</string>
    <string name="nameRcyclerCardView">Name :</string>
    <string name="RecyclerViewNameTxt">Name  :</string>
    <string name="RecyclerViewSurnameTxt">Age :</string>
    <string name="RecyclerViewProfTxt">Profession :</string>
    <string name="EditProfileBtn">PROFILE</string>
    <string name="SettingsBtnCustomerPage">SETTINGS</string>
    <string name="StarsBtn">STARS</string>
    <string name="FindBtnCustPg">FIND</string>
    <string name="contributors">CONTRIBUTORS</string>
    <string name="showCust">SHOW CUSTOMERS</string>
    <string name="contr">CONTRIBUTORS</string>
</resources>
